--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>415</height>
+    <width>385</width>
+    <height>383</height>
    </rect>
+  </property>
+  <property name="mouseTracking">
+   <bool>false</bool>
   </property>
   <property name="windowTitle">
    <string>Login Project</string>
+  </property>
+  <property name="animated">
+   <bool>true</bool>
+  </property>
+  <property name="documentMode">
+   <bool>false</bool>
+  </property>
+  <property name="unifiedTitleAndToolBarOnMac">
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QLabel" name="UserLabel">
@@ -85,6 +97,9 @@
     <property name="text">
      <string/>
     </property>
+    <property name="maxLength">
+     <number>12</number>
+    </property>
     <property name="readOnly">
      <bool>false</bool>
     </property>
@@ -106,6 +121,9 @@
       <pointsize>11</pointsize>
      </font>
     </property>
+    <property name="maxLength">
+     <number>12</number>
+    </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
     </property>
@@ -116,8 +134,8 @@
    <widget class="QPushButton" name="LogIn">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>240</y>
+      <x>180</x>
+      <y>200</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -134,14 +152,37 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>310</y>
-      <width>75</width>
-      <height>23</height>
+      <x>60</x>
+      <y>210</y>
+      <width>81</width>
+      <height>81</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>26</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>msg</string>
+     <string>MSG</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Register">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>260</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Register</string>
     </property>
    </widget>
   </widget>
@@ -150,7 +191,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>385</width>
      <height>21</height>
     </rect>
    </property>
